document loading techniques added

--- a/0-Data-Ingestions/01-basics.ipynb
+++ b/0-Data-Ingestions/01-basics.ipynb
@@ -101,7 +101,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.makedirs(\"data/text-files\", exist_ok=True)."
+    "os.makedirs(\"data/text-files\", exist_ok=True)"
    ]
   },
   {
@@ -157,6 +157,65 @@
     "\n",
     "document = TextLoader(\"data/text-files/file1.txt\").load()\n",
     "print(document)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a3b4568",
+   "metadata": {},
+   "source": [
+    "### Directory Loader for loading multiple files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "08b51433",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [00:00<00:00, 1270.23it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading 1 documents.\n",
+      "\n",
+      "Document 1:\n",
+      "Content: This is the content of file one. It contains some sample text for testing.\n",
+      "Metadata: {'source': 'data/text-files/file1.txt'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_community.document_loaders import DirectoryLoader\n",
+    "\n",
+    "dir_loader = DirectoryLoader(\n",
+    "    \"data/text-files\",\n",
+    "    glob=\"*.txt\", # pattern to match files\n",
+    "    loader_cls=TextLoader,\n",
+    "    loader_kwargs={\"encoding\": \"utf-8\"},\n",
+    "    show_progress=True\n",
+    ")\n",
+    "\n",
+    "documents = dir_loader.load()\n",
+    "print(f\"Loading {len(documents)} documents.\")\n",
+    "for i, doc in enumerate(documents):\n",
+    "    print(f\"\\nDocument {i+1}:\")\n",
+    "    print(f\"Content: {doc.page_content}\")\n",
+    "    print(f\"Metadata: {doc.metadata}\")"
    ]
   }
  ],
